revive project and make it work

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" type="" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Angry cats</title>
+    <title>Physics demo</title>
   </head>
   <body>
     <div id="container">
